--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   webview_flutter_wkwebview: ^3.4.4
   webview_flutter_platform_interface: ^2.3.1
   shared_preferences: ^2.1.2
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
